fixed problem with article by setting overflow to hidden - not deal but not much time

--- a/css/styles.less
+++ b/css/styles.less
@@ -20,6 +20,7 @@
 /* ########################### Browser reset ########################### */
 html, body {
     position: absolute;
+    min-height: 100%;
     height: 100%;
     width:  100%;
 }
@@ -46,7 +47,7 @@ main {
   position: relative;
   height:     100%;
   width:      100%;
-  vertical-align: bottom;
+  overflow:   hidden;
 }
 
 header, footer {
